# yaml-pydantic-db

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/files/: a_input.yaml
src/schema/: __init__.py  examples.py  kubernetes.py  products.py  servers.py  users.py
src/utils/: helpers.py
